--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,7 @@ body {
 
 .header {
     height: 100vh;
-    background-image: linear-gradient(150deg, #a3713894 0%, rgba(34, 34, 34, 0.397) 100%), url(./img/woman.jpg);
+    background-image: linear-gradient(150deg, #da8c3394 0%, rgba(0, 0, 0, 0.555) 100%), url(../img/Ariadna/Aespalda2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -149,6 +149,9 @@ body {
 }
 
 /* ---------------------------- Nuestros servicios -------------------------- */
+.comenza_hoy {
+    padding-top: 1em;
+}
 
 .subtitulo {
     text-align: center;
@@ -194,6 +197,10 @@ body {
 }
 
 /* -----------------------------------------------------------------*/
+
+.terapias {
+    padding-top: 1em;
+}
 
 .gallery {
     background: linear-gradient(150deg, hsl(46, 100%, 66%), #ac6b16);
@@ -300,6 +307,46 @@ body {
 
 
 /* -----------------------------------------------------------------*/
+
+.gratuitos {
+    padding-top: 1em;
+}
+
+.gratuitos_fondo {
+    margin-top: 2em;
+    border-radius: 1em;
+    background: linear-gradient(50deg, #978787, #d1c382bd);
+}
+
+.tips {
+    border-radius: 0.5em;
+    background: linear-gradient(150deg, #ccc4b8, #ffffff);
+    text-align: center;
+}
+.tips:hover {
+    cursor: pointer;
+    background: linear-gradient(150deg, #ffffff, #ccc4b8);
+}
+
+.red_de_apoyo {
+    border-radius: 0.5em;
+    background: linear-gradient(150deg, #ccc4b8, #ffffff);
+    text-align: center;
+}
+.red_de_apoyo:hover {
+    cursor: pointer;
+    background: linear-gradient(150deg, #ffffff, #ccc4b8);
+}
+
+.tecnicas_de_respiracion {
+    border-radius: 0.5em;
+    background: linear-gradient(150deg, #ccc4b8, #ffffff);
+    text-align: center;
+}
+.tecnicas_de_respiracion:hover {
+    cursor: pointer;
+    background: linear-gradient(150deg, #ffffff, #ccc4b8);
+}
 
 .item-details {
     background-color: transparent; /* Sin fondo blanco por defecto */
@@ -411,6 +458,7 @@ body {
 .n-expert {
     display: inline-block;
     margin-top: 1em;
+    padding-bottom: 1em;
     width: 100%;
     font-weight: 400;
     color: #b6a36e ;
@@ -421,10 +469,10 @@ body {
 .testimonial-slider {
     width: 100%;
     margin: 2em auto;
+    padding: 2em 0;
     position: relative;
     overflow: hidden;
     background-color: rgba(207, 147, 36, 0.548); /* Fondo beige con transparencia */
-    padding: 2em 0;
     z-index: 1; /* Slider al fondo */
 }
 
@@ -440,7 +488,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 20px;
+    padding: 10px 20px;
 }
 
 .tituloTestimonios {
@@ -519,13 +567,17 @@ footer {
     padding-bottom: 0.1px;
 }
 
+.contenedor {
+    padding-top: 0;
+}
+
 .footer-content {
     display: flex;
     justify-content: space-between;
     text-align: center;
     flex-wrap: wrap;
-    padding-top: 4em;
-    padding-bottom: 4em;
+    padding-top: 5em;
+    padding-bottom: 5em;
 }
 
 .copyright {
